# pyonwater

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  test.py
.github/workflows/: actions.yaml  auto-release.yaml  coverage.yaml  pypi.yaml  require-version-bump.yaml
docs/: API_VALIDATION.md  DEVELOPER_GUIDE.md  TODO.md
pyonwater/: __init__.py  account.py  client.py  eow_historical_models.py  eow_models.py  exceptions.py  meter.py  meter_reader.py  models.py  series.py  units.py
pyonwater/models/: __init__.py  eow_historical_models.py  eow_models.py  models.py  units.py
test/: test_client.py
tests/: conftest.py  test_aggregation_levels.py  test_api_contracts.py  test_at_a_glance.py  test_client.py  test_conversion.py  test_meter.py  test_meter_reader.py  test_models_extensions.py  test_series.py  test_series_date_parsing.py  test_units.py  test_validation.py
tests/mock/: historical_data_mock_anonymized.json  historical_data_mock_anonymized_newer_data.json  historical_data_mock_anonymized_nodata.json  read_meter_mock_anonymized..json  read_meter_mock_anonymized.json
tests/mock_data/: at_a_glance_mock.json  historical_data_mock_anonymized.json  historical_data_mock_anonymized_newer_data.json  historical_data_mock_anonymized_newer_data_moredata.json  read_meter_mock_anonymized.json
tools/: anonymizer.py
