[project]
name = "pyonwater"
version = "0.1.0"
description = "EyeOnWater client library."
license = "MIT"
repository = "https://github.com/kdeyev/pyonwater"
homepage = "https://github.com/kdeyev/pyonwater"
documentation = "https://github.com/kdeyev/pyonwater"
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "tenacity",
    "pytz"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.poetry]
# ...
readme = "README.md"

[tool.black]
target-version = ["py39", "py310"]
exclude = 'generated'

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "homeassistant",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true
