[tool.poetry]
name = "pyonwater"
version = "0.1.0"
description = "EyeOnWater client library."
authors = ["Konstantin Deev <kn.deev@gmail.com>"]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
tenacity = "^8.2.3"
pytz = "^2023.3"
python-dateutil = "^2.8.2"

[tool.black]
target-version = ["py39", "py310"]
exclude = 'generated'

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "homeassistant",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true
